Manejo de valores faltantes

--- a/Mision1-BeatrizLopez.ipynb
+++ b/Mision1-BeatrizLopez.ipynb
@@ -5,8 +5,7 @@
    "id": "7d479610-fe7d-4798-9023-6f7a1c0d86a4",
    "metadata": {},
    "source": [
-    "![](imagenes_notebook/portada.png)\n",
-    "![](imagenes_notebook/ruta.png)"
+    "<img src=imagenes_notebook/portada.png><img src=imagenes_notebook/ruta.png>"
    ]
   },
   {
@@ -173,6 +172,8 @@
     "                   'Variable':'variable',\n",
     "                   'Unidades':'unidades',\n",
     "                   'Concentración':'concentracion',\n",
+    "                   'Tecnología':'tecnologia',\n",
+    "                   'Tipo de estación':'tipo_estacion'\n",
     "                  },inplace=True)"
    ]
   },
@@ -328,14 +329,14 @@
       "fecha                                   0\n",
       "Autoridad Ambiental                     0\n",
       "Nombre de la estación                   0\n",
-      "Tecnología                        4732181\n",
+      "tecnologia                        4732181\n",
       "latitud                               365\n",
       "longitud                              365\n",
       "Código del departamento               365\n",
       "departamento                          365\n",
       "Código del municipio                  365\n",
       "municipio                             365\n",
-      "Tipo de estación                      365\n",
+      "tipo_estacion                         365\n",
       "tiempo_exposicion                       0\n",
       "variable                                0\n",
       "unidades                                0\n",
@@ -375,14 +376,14 @@
       " 0   fecha                           20389245 non-null  object \n",
       " 1   Autoridad Ambiental             20389245 non-null  object \n",
       " 2   Nombre de la estación           20389245 non-null  object \n",
-      " 3   Tecnología                      15657064 non-null  object \n",
+      " 3   tecnologia                      15657064 non-null  object \n",
       " 4   latitud                         20388880 non-null  float64\n",
       " 5   longitud                        20388880 non-null  float64\n",
       " 6   Código del departamento         20388880 non-null  float64\n",
       " 7   departamento                    20388880 non-null  object \n",
       " 8   Código del municipio            20388880 non-null  float64\n",
       " 9   municipio                       20388880 non-null  object \n",
-      " 10  Tipo de estación                20388880 non-null  object \n",
+      " 10  tipo_estacion                   20388880 non-null  object \n",
       " 11  tiempo_exposicion               20389245 non-null  int64  \n",
       " 12  variable                        20389245 non-null  object \n",
       " 13  unidades                        20389245 non-null  object \n",
@@ -428,10 +429,8 @@
     "| ------------- |\n",
     "|Autoridad Ambiental |\n",
     "|Nombre de la estación |\n",
-    "|Tecnología |\n",
     "|Código del Departamento |\n",
     "|Código del municipio |\n",
-    "|Tipo de estación |\n",
     "|Nueva columna georreferenciada |\n",
     "\n",
     "\n",
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fccee51f-f939-41b5-8f9e-1238942e3cf1",
    "metadata": {},
    "outputs": [
@@ -587,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Tecnología variable  tiempo_exposicion  concentracion\n",
+      "         tecnologia variable  tiempo_exposicion  concentracion\n",
       "365          Manual     PM10                 24      92.800000\n",
       "567          Manual     PM10                 24      94.800000\n",
       "568          Manual     PM10                 24      90.800000\n",
@@ -606,7 +605,7 @@
    ],
    "source": [
     "# Mostrar valores fuera del rango intercuartil para cada contaminante por tiempo de exposición\n",
-    "print(fuera_de_rango[[\"Tecnología\",\"variable\",\"tiempo_exposicion\",\"concentracion\"]])"
+    "print(fuera_de_rango[[\"tecnologia\",\"variable\",\"tiempo_exposicion\",\"concentracion\"]])"
    ]
   },
   {
@@ -619,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "def77854-095f-4081-97ec-3b0f953f15bd",
    "metadata": {},
    "outputs": [
@@ -676,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c5e49003-1788-4ab7-a31e-c9eca2b0ea0a",
    "metadata": {},
    "outputs": [
@@ -727,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e1d046b2-1e61-4ee1-acc9-14037409acd2",
    "metadata": {},
    "outputs": [],
@@ -745,15 +744,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7fffdb28-18b3-4175-bd2b-c12a5e95a439",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Eliminar columnas irrelevantes, axis=1 indica que se eliminan las columnas, 0 las filas\n",
     "df.drop([\n",
-    "    'Autoridad Ambiental', 'Nombre de la estación','Tecnología','Código del departamento', \n",
-    "    'Código del municipio', 'Tipo de estación', 'Nueva columna georreferenciada'\n",
+    "    'Autoridad Ambiental', 'Nombre de la estación','Código del departamento', \n",
+    "    'Código del municipio', 'Nueva columna georreferenciada'\n",
     "], axis=1, inplace=True) "
    ]
   },
@@ -767,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f1620c17-4701-4241-ac5c-e644910b0bb3",
    "metadata": {},
    "outputs": [
@@ -776,10 +775,12 @@
      "output_type": "stream",
      "text": [
       "fecha                      0\n",
+      "tecnologia           4723611\n",
       "latitud                  365\n",
       "longitud                 365\n",
       "departamento             365\n",
       "municipio                365\n",
+      "tipo_estacion            365\n",
       "tiempo_exposicion          0\n",
       "variable                   0\n",
       "unidades                   0\n",
@@ -794,31 +795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "f13c94e5-1e7e-4d28-92f8-e09d0cd2bbfa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fecha                      0\n",
-      "latitud                    0\n",
-      "longitud                   0\n",
-      "departamento               0\n",
-      "municipio                  0\n",
-      "tiempo_exposicion          0\n",
-      "variable                   0\n",
-      "unidades                   0\n",
-      "concentracion        1373560\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.dropna(subset = ['latitud', 'longitud', 'departamento', 'municipio'], inplace=True)\n",
-    "\n",
-    "print(df.isna().sum()) #Visualizar el dataset despues de eliminar los valores nulos irrelevantes"
+    "df.dropna(subset = ['latitud', 'longitud', 'departamento', 'municipio'], inplace=True)"
    ]
   },
   {
@@ -853,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8d4a45b9-a273-494e-a5ee-169e8fca3f20",
    "metadata": {},
    "outputs": [
@@ -879,14 +861,194 @@
    "source": [
     "### 6. Detección y Tratamiento de Datos Ausentes:\n",
     "\n",
-    "* **Mostrar cómo manejar los datos faltantes mediante el descarte o técnicas de \n",
-    "imputación (media, mediana, regresión, Hot deck)**"
+    "* **Identificar los datos faltantes:**\n",
+    "- Definir cuales son los contaminantes criterio que tienen datos faltantes.\n",
+    "- Determinar cual es el mecanismo detras de la perdida de datos. Estos mecanismos pueden ser Datos Faltantes Completamente Aleatorios (MCAR), Datos Faltantes No Aleatorios (MNAR) y Datos Faltantes Aleatorios (MAR)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4aaa4d89-ecfa-415b-bdd0-7fba95a37c5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fecha                      0\n",
+      "tecnologia           4723246\n",
+      "latitud                    0\n",
+      "longitud                   0\n",
+      "departamento               0\n",
+      "municipio                  0\n",
+      "tipo_estacion              0\n",
+      "tiempo_exposicion          0\n",
+      "variable                   0\n",
+      "unidades                   0\n",
+      "concentracion        1373560\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1344fb94-4b59-46e4-9701-8bcbc7153ea8",
+   "metadata": {},
+   "source": [
+    "Para econtrar el mecanismo de la perdida de datos, analizamos la relacion de los valores nulos, comparando la columna ***tecnologia*** con la columna ***concentracion***.\n",
+    "\n",
+    "Primero revisamos los valores de la columna tecnología, que nos indica como fueron adquiridos los datos de concentración, que normalmente se toman de forma manual o automática:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c9f3c539-2f6f-481f-afb0-85b82eb3fe46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Manual' 'Automática' nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tecnologia.unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38637a2a-23f7-4896-90cb-a545da0b3e0b",
+   "metadata": {},
+   "source": [
+    "Lo anterior nos indica que hay registros que no tiene información acerca de como fueron adquiridos.\n",
+    "\n",
+    "Procedemos a analizar si los valores nulos de la columna ***concentracion*** coinciden con los valores nulos de la columna ***tecnologia***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "700d5dda-49a1-4f74-bfa0-228d63735e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(df_nulls \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtecnologia\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misnull() \u001b[38;5;241m&\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconcentracion\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misnull()])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_nulls = df[df['tecnologia'].isnull() & df['concentracion'].isnull()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34c441f3-f659-4104-9989-affd2fec9098",
+   "metadata": {},
+   "source": [
+    "Se encuentran **1'373.560** registros que coinciden con el numero total de registros nulos de la columna ***concentracion***. Es decir que todos los valores nulos en concentracion coinciden con valores nulos en ***tecnologia***; podriamos suponer que la falta de datos en *concentracion* está relacionada con la falta de datos en *tecnologia* y esto mostraria que la pérdida de datos en este caso es **no aleatoria (MNAR)**, ya que los valores faltantes en *concentracion* parecen estar directamente relacionados con los valores faltantes en *tecnologia*.\n",
+    "\n",
+    "Sin embargo, hay valores **no nulos** en *concentracion* cuando *tecnologia* es nulo, pudiendo sugerir que la presencia de valores de *concentracion* **no** está directamente relacionada con la falta de *tecnología*, lo que podría indicar una de las siguientes situaciones:\n",
+    "\n",
+    "- **Datos Faltantes Completamente Aleatorios MCAR** (Missing Completely At Random): La ausencia de valores en *tecnologia* y la presencia de valores en *concentracion* ocurren de manera completamente aleatoria, sin influencia mutua.\n",
+    "\n",
+    "- **Posible inconsistencia de datos**: Puede haber errores o inconsistencias en los datos, lo que genera registros en concentracion sin una tecnología asociada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73405105-4588-431b-9d18-bc5fdcb1af37",
+   "metadata": {},
+   "source": [
+    "* **Técnicas de descarte e imputación:**\n",
+    "\n",
+    "**- Descarte:** se realiza para cuando los datos faltantes no son aleatorios (MNAR), y no son superiores al 10% del total de datos. \n",
+    "\n",
+    "**- Imputación:** se aplica cuando existan datos faltantes aleatorios (MAR) o completamente aleatorios (MCAR). Las tecnicas de imputacion toman los valores de los datos vecinos para estimar aproximadamente el valor del dato faltante. Idealmente la imputacion no debe cambiar la distribucion de los datos.\n",
+    "\n",
+    "<img src=imagenes_notebook/distribucion.png>\n",
+    "\n",
+    "Antes de seleccionar el método de imputacion, revisemos las variables con valores faltantes y las estadisticas descriptivas del set de datos para los contaminantes criterio a estudiar y las otras variables medidas:|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "249750ec-47c4-4575-8e19-3bf2b1ccdbbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Valores faltantes\n",
+    "grouped_df = df.groupby(['variable', 'tiempo_exposicion']) # Agrupar los datos por 'variable' y 'tiempo_exposicion'\n",
+    "resultado = grouped_df['concentracion'].apply(lambda x: x.isna().sum()).reset_index(name='cantidad_nulos')\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155a83b2-73ed-4565-a243-3ccb12b81116",
+   "metadata": {},
+   "source": [
+    "Estadisticas descriptivas:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc753754-cbc2-4379-8df0-3575328dd02b",
+   "id": "8939bef8-38b6-443c-9eab-1204614bc708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resumen_estadistico = df.groupby(['variable', 'tiempo_exposicion'])['concentracion'].describe()\n",
+    "print(resumen_estadistico)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85b8d4b-749d-4623-a741-5f36d4832289",
+   "metadata": {},
+   "source": [
+    "**- Selección de técnica de imputacion:** Se revisan solamente las tecnicas de imputacion simple.\n",
+    "\n",
+    "- Imputación por la media, mediana o moda:\n",
+    "    - Cuándo usarla: Para variables numéricas cuando se asume que los datos faltantes son completamente aleatorios (MCAR).\n",
+    "    - Ventajas: Simple y fácil de implementar.\n",
+    "    - Desventajas: Puede subestimar la varianza y no es adecuada si hay valores atípicos.\n",
+    "      \n",
+    "\n",
+    "- Imputación por regresión:\n",
+    "    - Cuándo usarla: Para variables numéricas cuando existe una relación lineal entre la variable con datos faltantes y otras variables.\n",
+    "    - Ventajas: Utiliza la información de otras variables para hacer una estimación más precisa.\n",
+    "    - Desventajas: Asume una relación lineal y puede ser sesgada si el modelo de regresión no es adecuado.\n",
+    "      \n",
+    "\n",
+    "- Imputación por Hotdeck el vecino más cercano (k-NN):\n",
+    "    - Cuándo usarla: Encuentra los k registros más cercanos al registro con datos faltantes y utiliza sus valores para estimar el valor faltante.\n",
+    "    - Ventajas: Flexible y puede capturar relaciones no lineales.\n",
+    "    - Desventajas: Sensible a la elección de k y a la escala de las variables.\n",
+    "      \n",
+    "\n",
+    "Para este caso **se selecciona la imputacion por media**, ya que los datos faltantes son **completamente aleatorios (MCAR)**. Se descarta la imputacion por regresion dado que no existe una relación lineal entre la concentracion de las variables de calidad del aire medidas con datos faltantes y otras variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9010d33c-7932-4bb4-94a0-6adf56554a84",
    "metadata": {},
    "outputs": [],
    "source": []
