nomalizacion de los datos

--- a/Mision1-BeatrizLopez.ipynb
+++ b/Mision1-BeatrizLopez.ipynb
@@ -70,6 +70,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn import preprocessing\n",
     "\n",
     "path_data = \"CALIDAD_AIRE.csv\"\n",
     "df = pd.read_csv(path_data, low_memory=False)"
@@ -1036,13 +1037,17 @@
     "    - Desventajas: Asume una relación lineal y puede ser sesgada si el modelo de regresión no es adecuado.\n",
     "      \n",
     "\n",
-    "- Imputación por Hotdeck el vecino más cercano (k-NN):\n",
+    "- Imputación por Hot Deck o el vecino más cercano (k-NN):\n",
     "    - Cuándo usarla: Encuentra los k registros más cercanos al registro con datos faltantes y utiliza sus valores para estimar el valor faltante.\n",
     "    - Ventajas: Flexible y puede capturar relaciones no lineales.\n",
     "    - Desventajas: Sensible a la elección de k y a la escala de las variables.\n",
     "      \n",
     "\n",
-    "Para este caso **se selecciona la imputacion por media**, ya que los datos faltantes son **completamente aleatorios (MCAR)**. Se descarta la imputacion por regresion dado que no existe una relación lineal entre la concentracion de las variables de calidad del aire medidas con datos faltantes y otras variables."
+    "**1- Imputación de la columna concentración**: \n",
+    "\n",
+    "En este caso **se selecciona la imputacion por media, madiana o moda**, ya que los datos faltantes son **completamente aleatorios (MCAR)**. Se descarta la imputacion por regresion dado que no existe una relación lineal entre la concentracion de las variables de calidad del aire medidas con datos faltantes y otras variables. \n",
+    "    \n",
+    "Para la imputacion, **se selecciona la mediana**, ya que como ***el dataset de calidad del aire tiene outliers o valores atípicos***  (como se observo con el análisis del rango intercuartilico), la media puede no ser la mejor opción. "
    ]
   },
   {
@@ -1051,7 +1056,196 @@
    "id": "9010d33c-7932-4bb4-94a0-6adf56554a84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Agrupar por 'variable' y 'tiempo_exposicion' y calcular la mediana\n",
+    "grouped = df.groupby(['variable', 'tiempo_exposicion'])['concentracion'].transform('median')\n",
+    "\n",
+    "# Rellenar los valores nulos con la mediana calculada\n",
+    "df['concentracion'] = df['concentracion'].fillna(grouped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cb6588f-d296-4d7b-89e9-b39d90e7c6c1",
+   "metadata": {},
+   "source": [
+    "**2- Imputación de la columna tecnología**: \n",
+    "\n",
+    "Esta columna es una **variable categórica**. Se usa la técnica de imputar con la **categoría mas frecuente o moda**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffddff29-793e-4d4e-8211-ad1f16a4f557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imputar las columnas con variables categoricas\n",
+    "df['tecnologia'] = df['tecnologia'].fillna(df['tecnologia'].mode()[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ccd290-d190-4298-a3e8-e2c3eb8751e4",
+   "metadata": {},
+   "source": [
+    "Finalmente el dataset no tiene valores faltantes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4325fbe2-c394-4ec5-8aff-e732dc7aa44f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a988e8-566a-4251-b268-31bec8e8e29f",
+   "metadata": {},
+   "source": [
+    "### 7. Normalización de Datos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a762ccdd-c38e-4752-8f7c-138bc9b18252",
+   "metadata": {},
+   "source": [
+    "En primer lugar observamos la distribucion de los datos originales. Para mejor visualizacion mostraremos la normalizacion de 3 contaminantes criterio medidos en diferentes tiempos de exposición:\n",
+    "\n",
+    "- PM10 en 24 horas y 1 hora\n",
+    "- PM2.5 en 24 horas y 1 hora\n",
+    "- Monoxido de Carbono (CO) en 8 horas y 1 hora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ad0517-1a6f-4781-a381-b8d17b6ac931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contaminantes = ['PM10', 'PM2.5', 'CO']  # Contaminantes criterio a estudiar\n",
+    "df_cc = df[df['variable'].isin(contaminantes)]  # data frame de contaminantes criterio\n",
+    "\n",
+    "# Obtenemos las combinaciones únicas de 'variable' y 'tiempo_exposicion'\n",
+    "unique_combinations = df_cc[['variable', 'tiempo_exposicion']].drop_duplicates()\n",
+    "\n",
+    "### ANTES DE NORMALIZAR\n",
+    "# Configuramos la figura para los gráficos \n",
+    "fig, axes = plt.subplots(2, \n",
+    "                          len(df_cc['tiempo_exposicion'].unique()), \n",
+    "                          figsize=(12, 8), constrained_layout=True)\n",
+    "axes = axes.flatten()  # Aseguramos un arreglo plano para iterar fácilmente\n",
+    "\n",
+    "# Iteramos solo sobre las combinaciones únicas\n",
+    "for idx, (variable, tiempo_exposicion) in enumerate(unique_combinations.values):\n",
+    "    group = df_cc[(df_cc['variable'] == variable) & (df_cc['tiempo_exposicion'] == tiempo_exposicion)]\n",
+    "    ax = axes[idx]\n",
+    "    ax.plot(group['concentracion'], linewidth=0, marker=\"+\", color=\"purple\", markersize=6)\n",
+    "    ax.set_title(f'Variable: {variable}\\nTiempo exposición: {tiempo_exposicion}')\n",
+    "\n",
+    "# Ajustamos el espacio en blanco\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e19031-d4b3-4b2d-842b-70025e892dd7",
+   "metadata": {},
+   "source": [
+    "Tambien es importante visualizar la **distribución** que tiene cada una de estas variables con **histogramas**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e88446-b502-482d-8e81-2c556835687e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, \n",
+    "                          len(df_cc['tiempo_exposicion'].unique()), \n",
+    "                          figsize=(12, 8), constrained_layout=True)\n",
+    "axes = axes.flatten()  # Aseguramos un arreglo plano para iterar fácilmente\n",
+    "\n",
+    "# Iteramos solo sobre las combinaciones únicas\n",
+    "for idx, (variable, tiempo_exposicion) in enumerate(unique_combinations.values):\n",
+    "    group = df_cc[(df_cc['variable'] == variable) & (df_cc['tiempo_exposicion'] == tiempo_exposicion)]\n",
+    "    ax = axes[idx]\n",
+    "    ax.hist(group['concentracion'], bins=20, color=\"orange\")\n",
+    "    ax.set_title(f'Variable: {variable}\\nTiempo exposición: {tiempo_exposicion}')\n",
+    "\n",
+    "# Ajustamos el espacio en blanco\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c34955-1954-42eb-a4e6-3fa0167753b0",
+   "metadata": {},
+   "source": [
+    "Para **homogeneizar** el conjunto de datos, tenemos las opciones de \n",
+    "- Escalar en funcion del minimo y del maximo\n",
+    "- Normalizar en función de la norma del vector\n",
+    "- Estandarizar transformando la media = 0 y la desviacion estandar = 1: se selecciona la **estandarizacion con escalamiento robusto** ya que este se hace basado en el rango intercuartilico evitando que los outliers o datos de valores atípicos que pueden afectar negativamente los resultados de los modelos de machine learning a utilizar mas adelante."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d334740f-6ff1-40e1-974b-3f0a630cc18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escalamos la columna 'concentracion' agrupada por 'variable' y 'tiempo_exposicion'\n",
+    "df_cc['concentracion_scaled'] = (\n",
+    "    df_cc.groupby(['variable', 'tiempo_exposicion'], group_keys=False)['concentracion']\n",
+    "    .apply(lambda x: pd.Series(preprocessing.RobustScaler().fit_transform(x.values.reshape(-1, 1)).flatten(), index=x.index))\n",
+    ")\n",
+    "#estandarizado = (X - rango intercuartilico) / std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f5871b1-551f-4577-9ea8-5307d44b7bf8",
+   "metadata": {},
+   "source": [
+    "Ahora visualizamos los histogramas de los datos homogeneizados. La distribucion de los datos es igual, pero la **escala** se ha reducido sin afectar la información:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c9b27d7-f605-4ced-a000-774f76ec2815",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###DESPUES DE NORMALIZAR\n",
+    "# Configuramos la figura para los gráficos\n",
+    "fig, axes = plt.subplots(2, \n",
+    "                          len(df_cc['tiempo_exposicion'].unique()), \n",
+    "                          figsize=(12, 8), constrained_layout=True)\n",
+    "axes = axes.flatten()  # Aseguramos un arreglo plano para iterar fácilmente\n",
+    "\n",
+    "# Iteramos solo sobre las combinaciones únicas\n",
+    "for idx, (variable, tiempo_exposicion) in enumerate(unique_combinations.values):\n",
+    "    group = df_cc[(df_cc['variable'] == variable) & (df_cc['tiempo_exposicion'] == tiempo_exposicion)]\n",
+    "    ax = axes[idx]\n",
+    "    ax.hist(group['concentracion'], bins=100, color=\"red\", alpha=0.7)\n",
+    "    ax.set_title(f'RobutScaler para Variable: {variable}\\nTiempo exposición: {tiempo_exposicion}')\n",
+    " \n",
+    "# Ajustamos el espacio en blanco\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
